# rolldown

crates/rolldown/src/stages/: scan_stage.rs
crates/rolldown_binding/src/options/plugin/: binding_transform_context.rs
crates/rolldown_binding/src/options/plugin/config/: binding_asset_plugin_config.rs
crates/rolldown_error/src/: event_kind.rs
crates/rolldown_error/src/build_error/: error_constructors.rs
crates/rolldown_error/src/events/: mod.rs  namespace_conflict.rs
crates/rolldown_plugin/: Cargo.toml
crates/rolldown_plugin/src/: transform_plugin_context.rs
crates/rolldown_plugin_asset/src/: lib.rs
crates/rolldown_plugin_utils/src/: file_to_url.rs  lib.rs
