[package]
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "rolldown_plugin"
repository.workspace = true
version              = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
inner = []

[lints]
workspace = true

[dependencies]
anyhow              = { workspace = true }
arcstr              = { workspace = true }
async-trait         = { workspace = true }
oxc                 = { workspace = true }
oxc_index           = { workspace = true }
oxc_sourcemap       = { version = "0.15.0" }
rolldown_common     = { workspace = true }
rolldown_ecmascript = { workspace = true }
rolldown_resolver   = { workspace = true }
rolldown_sourcemap  = { workspace = true }
rolldown_utils      = { workspace = true }
string_wizard       = { version = "0.0.21", features = ["source_map"] }
sugar_path          = { workspace = true }
tracing             = { workspace = true }
typedmap            = { workspace = true, features = ["dashmap"] }
